--- a/webproject/style.css
+++ b/webproject/style.css
@@ -4,6 +4,9 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior:smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -132,20 +135,20 @@ nav ul li a:hover::after {
 .tab-contents.active-tab{
     display: block;
 }
-/*-----------------services------------*/
+/*-----------------hobilerim------------*/
 #services{
     padding: 30px 0;
 }
 .sub-title {
     margin-top: -20px; /* Yukarı kaydırma miktarı */
 }
-.services-list{
+.hobbies-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+.hobbies-list div{
     background: #262626;
     padding: 40px;
     font-size: 13px;
@@ -153,23 +156,23 @@ nav ul li a:hover::after {
     border-radius: 20px;
     transition: background 0.4s, transform 0.4s;
 }
-.services-list div i{
+.hobbies-list div i{
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div h2{
+.hobbies-list div h2{
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
-.services-list div a{
+.hobbies-list div a{
     text-decoration: none;
     color: #fff;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
-.services-list div:hover{
+.hobbies-list div:hover{
     background: #2c0cce;
     transform:translateY(-15px);
 }
@@ -266,5 +269,24 @@ nav .fa-solid{
         top: 25px;
         left: 25px;
         cursor: pointer;
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+    .about-col-1, .about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 20px;
+    }
+    .about-col-2{
+        font-size: 16px;
+    }
+    .tab-links{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
     }
 }
