--- a/webproject/stylesehrimiz.css
+++ b/webproject/stylesehrimiz.css
@@ -26,13 +26,10 @@ body{
     margin-top: 30px;
     color: red;
 }
-.header-text h5{
-    margin-left: 90px;
-    font-size: 20px;
-    margin-top: 30px;
-    color: rgb(64, 158, 64);
-
+#gezi {
+    text-align: center; /* Başlığı sayfanın ortasına hizala */
 }
+
 
 .header-text p{
     color: #fff;
@@ -40,7 +37,22 @@ body{
     text-indent: 10px   ;
     margin-right: 15px;
     
+}.header-text h5{
+    margin-left: 90px;
+    font-size: 20px;
+    margin-top: 30px;
+    color: rgb(64, 158, 64);
+
 }
+.header-text ul {
+    margin: 20px 0; /* Liste etrafındaki boşluk */
+    padding: 10px; /* Liste iç boşluk */
+    
+    width: calc(50% - 30px); /* %50 genişlik ve kenar boşlukları çıkarıldı */
+    float: left; /* Sol kenara yaslanma */
+    margin-right: 20px; /* Sağda boşluk */
+}
+
 .header-text ul li{
     color: #fff;
     margin-left: 125px;
