--- a/webproject/stylesehrimiz.css
+++ b/webproject/stylesehrimiz.css
@@ -26,9 +26,6 @@ body{
     margin-top: 30px;
     color: red;
 }
-#gezi {
-    text-align: center; /* Başlığı sayfanın ortasına hizala */
-}
 
 
 .header-text p{
@@ -37,22 +34,14 @@ body{
     text-indent: 10px   ;
     margin-right: 15px;
     
-}.header-text h5{
+}
+.header-text h5{
     margin-left: 90px;
     font-size: 20px;
     margin-top: 30px;
     color: rgb(64, 158, 64);
 
 }
-.header-text ul {
-    margin: 20px 0; /* Liste etrafındaki boşluk */
-    padding: 10px; /* Liste iç boşluk */
-    
-    width: calc(50% - 30px); /* %50 genişlik ve kenar boşlukları çıkarıldı */
-    float: left; /* Sol kenara yaslanma */
-    margin-right: 20px; /* Sağda boşluk */
-}
-
 .header-text ul li{
     color: #fff;
     margin-left: 125px;
@@ -64,6 +53,42 @@ body{
     color: #fff;
     margin-left: 125px;
 }
+#gezi-balmumu {
+  float: right; /* Sağa yaslanması için */
+  width: 550px; /* Genişliği ayarlayın, istediğiniz boyuta göre değiştirin */
+  margin-top: -200px; /* Listenin üstünde bir boşluk bırakmak için */
+}
+
+#gezi-balmumu li {
+  list-style: none; /* Liste işaretlerini kaldırmak için */
+  margin-bottom: 10px; /* Öğeler arası boşluk eklemek için */
+  margin-right: 50px;
+  font-size: 15px;
+}
+
+#gezi-balmumu li img {
+  width: 100%; /* Resmin genişliğini %100 yaparak konteynırın tamamını kaplamasını sağlar */
+  height: auto; /* Orantılı olarak yüksekliği otomatik ayarlar */
+  border-radius: 15px;
+}
+#gezi-areko {
+    float: right; /* Sağa yaslanması için */
+    width: 550px; /* Genişliği ayarlayın, istediğiniz boyuta göre değiştirin */
+    margin-top: -200px; /* Listenin üstünde bir boşluk bırakmak için */
+  }
+  
+  #gezi-areko li {
+    list-style: none; /* Liste işaretlerini kaldırmak için */
+    margin-bottom: 10px; /* Öğeler arası boşluk eklemek için */
+    margin-right: 50px;
+    font-size: 15px;
+  }
+  
+  #gezi-areko li img {
+    width: 100%; /* Resmin genişliğini %100 yaparak konteynırın tamamını kaplamasını sağlar */
+    height: auto; /* Orantılı olarak yüksekliği otomatik ayarlar */
+    border-radius: 15px;
+  }
 .container{
     padding: 10px 10%;
 }
