--- a/webproject/stylehobilerim.css
+++ b/webproject/stylehobilerim.css
@@ -1,42 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family:'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background: #000000;
-    color: #fff ;
+    color: #fff;
 }
-#header{
+
+#header {
     width: 100%;
-    height: 100vh;
-    background-size:cover;
+    height: 100px;
+    background-size: cover;
     background-position: center;
 }
-.container{
+
+.container {
     padding: 10px 10%;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap:wrap  ;
+    flex-wrap: wrap;
 }
-.logo{
+
+.logo {
     width: 70px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 16px;
     position: relative;
 }
+
 nav ul li a::after {
     content: '';
     position: absolute;
@@ -51,25 +59,72 @@ nav ul li a::after {
 nav ul li a:hover::after {
     width: 100%;
 }
-/*-----------------css for small screen------------*/
-nav .fa-solid{
-    display: none;
+
+.interests-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* İki kutucuk yan yana gelecek */
+    gap: 20px;
+    padding: 20px;
 }
 
-@media only screen and (max-width:600px){
+.interest {
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    transition: background-color 0.3s ease;
+}
 
-    .header-text{
+.interest:hover {
+    background-color: #4f4e56;
+}
+
+.interest h2 {
+    color: #2c0cce;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.interest h4 {
+    color: #fff;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.interest p {
+    color: #fff;
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.interest ul {
+    padding-left: 20px;
+}
+
+.interest ul li {
+    color: #fff;
+    font-size: 16px;
+}
+nav .fa-solid{
+    display: none;
+}   
+
+@media only screen and (max-width:600px) {
+    .header-text {
         margin-top: 100%;
         font-size: 16px;
     }
-    .header-text h1{
+
+    .header-text h1 {
         font-size: 30px;
     }
-    nav .fa-solid{
+
+    nav .fa-solid {
         display: block;
         font-size: 25px;
     }
-    nav ul{
+
+    nav ul {
         background: #2c0cce;
         position: fixed;
         top: 0;
@@ -80,11 +135,13 @@ nav .fa-solid{
         z-index: 2;
         transition: right 0.4s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 25px;
     }
-    nav ul .fa-solid{
+
+    nav ul .fa-solid {
         position: absolute;
         top: 25px;
         left: 25px;
