--- a/webproject/styleiletisim.css
+++ b/webproject/styleiletisim.css
@@ -1,42 +1,50 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family:'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background: #000000;
-    color: #fff ;
+    color: #fff;
 }
-#header{
+
+#header {
     width: 100%;
-    height: 100vh;
-    background-size:cover;
+    height: 100px;
+    background-size: cover;
     background-position: center;
 }
-.container{
+
+.container {
     padding: 10px 10%;
 }
-nav{
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-wrap:wrap  ;
+    flex-wrap: wrap;
 }
-.logo{
+
+.logo {
     width: 70px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
 }
-nav ul li a{
+
+nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 16px;
     position: relative;
 }
+
 nav ul li a::after {
     content: '';
     position: absolute;
@@ -51,25 +59,84 @@ nav ul li a::after {
 nav ul li a:hover::after {
     width: 100%;
 }
+
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+.contact-left p{
+    margin-top: 30px;
+}
+.contact-left p i{
+    color: #2c0cce;
+    margin-right: 10px;
+    font-size: 25px;
+}
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 25px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: #2c0cce;
+    transform: translateY(-5px);
+}
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background: #3a393e;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 8px;
+}
+form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    color: #ffffff;
+    background: #2c0cce;
+}
 /*-----------------css for small screen------------*/
 nav .fa-solid{
     display: none;
 }
 
-@media only screen and (max-width:600px){
 
-    .header-text{
+
+
+@media only screen and (max-width:600px) {
+
+    .header-text {
         margin-top: 100%;
         font-size: 16px;
     }
-    .header-text h1{
+
+    .header-text h1 {
         font-size: 30px;
     }
-    nav .fa-solid{
+
+    nav .fa-solid {
         display: block;
         font-size: 25px;
     }
-    nav ul{
+
+    nav ul {
         background: #2c0cce;
         position: fixed;
         top: 0;
@@ -80,14 +147,19 @@ nav .fa-solid{
         z-index: 2;
         transition: right 0.4s;
     }
-    nav ul li{
+
+    nav ul li {
         display: block;
         margin: 25px;
     }
+
     nav ul .fa-solid{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
     }
 }
