--- a/webproject/stylesehrimiz.css
+++ b/webproject/stylesehrimiz.css
@@ -188,6 +188,7 @@ nav .fa-solid{
     nav .fa-solid{
         display: block;
         font-size: 25px;
+        color: white;
     }
     nav ul{
         background: #2c0cce;
