--- a/webproject/stylekaydol.css
+++ b/webproject/stylekaydol.css
@@ -10,7 +10,7 @@ body{
 }
 #header{
     width: 100%;
-    height: 100vh;
+    height: 100px;
     background-size:cover;
     background-position: center;
 }
@@ -54,6 +54,55 @@ nav ul li a:hover::after {
 /*-----------------css for small screen------------*/
 nav .fa-solid{
     display: none;
+}
+#login-form {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 50px;
+}
+
+#login-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #2c0cce;
+}
+
+#login-form label {
+    display: block;
+    margin-bottom: 10px;
+    color: #2c0cce;
+}
+
+#login-form input[type="text"],
+#login-form input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+#login-form input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #2c0cce;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#login-form input[type="submit"]:hover {
+    background-color: #1d0aae;
+}
+
+#login-form .error {
+    color: #ff0000;
+    margin-top: 10px;
 }
 
 @media only screen and (max-width:600px){
