--- a/webproject/style.css
+++ b/webproject/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png) ;
+    background-image: url(images/arkap.jpg) ;
     background-size: cover;
     background-position: center;
 }
@@ -236,7 +236,7 @@ nav .fa-solid{
 
 @media only screen and (max-width:600px){
     #header{
-        background-image:url(images/phone-background.png) ;
+        background-image:url(images/arkap.jpg) ;
     }
     .header-text{
         margin-top: 100%;
@@ -289,4 +289,56 @@ nav .fa-solid{
     .contact-left, .contact-right{
         flex-basis: 100%;
     }
+    /* style.css dosyasına eklenecek kodlar */
+h1 {
+    font-size: 3em; /* Varsayılan yazı tipi boyutu */
+}
+
+/* Varsayılan ayarlar */
+.header-text h1 {
+    font-size: 3em; /* Varsayılan yazı tipi boyutu */
+    margin-bottom: 20px; /* Başlık ve resim arasındaki varsayılan boşluk */
+}
+
+/* Büyük ekranlar için */
+@media (max-width: 1200px) {
+    .header-text h1 {
+        font-size: 2.5em;
+        margin-bottom: 18px;
+    }
+}
+
+/* Orta boy ekranlar için */
+@media (max-width: 992px) {
+    .header-text h1 {
+        font-size: 2em;
+        margin-bottom: 16px;
+    }
+}
+
+/* Küçük ekranlar için */
+@media (max-width: 768px) {
+    .header-text h1 {
+        font-size: 1.75em;
+        margin-bottom: 14px;
+    }
+}
+
+/* Daha küçük ekranlar için */
+@media (max-width: 576px) {
+    .header-text h1 {
+        font-size: 1.5em;
+        margin-bottom: 12px;
+    }
+}
+
+/* En küçük ekranlar için */
+@media (max-width: 400px) {
+    .header-text h1 {
+        font-size: 1.25em;
+        margin-bottom: 10px;
+    }
+}
+
+
 }
