--- a/webproject/stylehobilerim.css
+++ b/webproject/stylehobilerim.css
@@ -105,6 +105,14 @@ nav ul li a:hover::after {
     color: #fff;
     font-size: 16px;
 }
+.api-baslık {
+    font-size: 16px;
+    margin-top: 20px;
+    color: #007bff; /* Mavi renk */
+    margin-bottom: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
 nav .fa-solid{
     display: none;
 }   
