--- a/webproject/stylesehrimiz.css
+++ b/webproject/stylesehrimiz.css
@@ -174,6 +174,26 @@ nav .fa-solid{
     font-size: 16px;
     line-height: 1.5;
   }
+  #backToTopBtn {
+    display: none; /* Başlangıçta gizli olacak */
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #2c0cce;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#backToTopBtn:hover {
+    background-color: #555;
+}
+
   
 
 @media only screen and (max-width:700px){
@@ -220,4 +240,21 @@ nav .fa-solid{
         margin-right: 0px; /* Sağ kenar boşluğunu kaldır */
         margin-left: 100px;
       }
+}
+@media (max-width: 768px) {
+    #backToTopBtn {
+        bottom: 15px;
+        right: 15px;
+        padding: 12px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    #backToTopBtn {
+        bottom: 10px;
+        right: 10px;
+        padding: 10px;
+        font-size: 14px;
+    }
 }
